QQmlPropertyBinding: Do re-attach observer after handling undefined

As noted in the comments above, we need to restore the binding to its
original state after resetting the property. This includes re-adding any
observers.

Fixes: QTBUG-114874
Change-Id: I2113a59f1bed59753c77ca3e0b00fed4c0487584
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
(cherry picked from commit 52fcaec65d0a13831b0b8c75957c58235d6fdcc4)