tests/auto/qml/qqmlecmascript/data/restoreObserverAfterReset.qml
@@ -1,0 +1,20 @@
+import QtQuick
+
+Item {
+    height: undefined
+    implicitHeight: 30
+    property int steps: 0
+
+    Behavior on height {
+        NumberAnimation {
+            duration: 500
+        }
+    }
+
+    onHeightChanged: ++steps
+
+    Component.onCompleted: {
+        height = Qt.binding(() => implicitHeight);
+        implicitHeight = 60;
+    }
+}
